# gtest-cmake-demo

./: .travis.yml  CMakeLists.txt  README.md  build.cmake  build.py
include/: add.h
src/: CMakeLists.txt  add.cpp  add.h  main.cpp
test/: CMakeLists.txt  test.add.cpp
